--- a/assets/style/inspirations.scss
+++ b/assets/style/inspirations.scss
@@ -7,19 +7,17 @@ a{
     margin: $margin;
     position: relative;
     .nameArticle {
+        @include fontsc(64px, #1c2e3d);
         padding-top: 150px;
-        font-size: 64px;
         line-height: 80px;
         text-align: center;
-        color: #1c2e3d;
     }
     .textArticle {
+        @include fontsc(16px, #788692);
         font-family: "SFCompactText";
         max-width: 640px;
-        font-size: 16px;
         line-height: 24px;
         text-align: center;
-        color: #788692;
         text-align: center;
         margin: 0 auto 96px auto;
     }
@@ -36,17 +34,15 @@ a{
                 flex-direction: column;
                 top: 322px;
                 .about {
-                    font-size: 10px;
+                    @include fontsc(10px, #ffffff);
                     line-height: 12px;
                     letter-spacing: 1.1px;
                     text-transform: uppercase;
-                    color: #ffffff;
                     margin-bottom: 8px;
                 }
                 .title {
-                    font-size: 32px;
+                    @include fontsc(32px, #ffffff);
                     line-height: 40px;
-                    color: #ffffff;
                     margin-bottom: 30px;
                 }
                 .avatar{
