--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -67,6 +67,7 @@ header nav .mainTitle {
 .background {
   width: 100%;
   position: absolute;
+  left: 0;
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
@@ -136,8 +137,8 @@ header nav .mainTitle {
 }
 .bottomHead .btnPlay {
   position: absolute;
-  top: 100px;
   left: 45%;
+  top: 100px;
   border-radius: 0px;
 }
 .bottomHead .btnPlay img {
@@ -189,8 +190,8 @@ header nav .mainTitle {
   font-size: 26px;
   color: #ffffff;
   position: absolute;
-  line-height: 31px;
   left: 53px;
+  line-height: 31px;
   bottom: 61px;
   width: 236px;
 }
@@ -246,6 +247,7 @@ section {
 }
 .rightContainer .rightColumn {
   position: absolute;
+  left: 133px;
   max-width: 368px;
   top: 127px;
   left: 133px;
@@ -292,6 +294,7 @@ section {
 
 .backgroundSecond {
   position: absolute;
+  left: 0;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -315,19 +318,19 @@ section {
   position: relative;
 }
 .wrap .nameArticle {
-  padding-top: 150px;
   font-size: 64px;
+  color: #1c2e3d;
+  padding-top: 150px;
   line-height: 80px;
   text-align: center;
-  color: #1c2e3d;
 }
 .wrap .textArticle {
+  font-size: 16px;
+  color: #788692;
   font-family: "SFCompactText";
   max-width: 640px;
-  font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #788692;
   text-align: center;
   margin: 0 auto 96px auto;
 }
@@ -335,8 +338,8 @@ section {
 picture {
   position: relative;
   display: flex;
-  width: 100%;
   justify-content: space-between;
+  width: 100%;
 }
 picture .wrapVideo {
   position: relative;
@@ -349,10 +352,11 @@ picture .wrapVideo .btnPlay {
 picture .wrapVideo .bottomTextPlay {
   position: absolute;
   left: 40px;
-  bottom: 40px;
   font-size: 32px;
-  line-height: 40px;
   color: #ffffff;
+  left: 40px;
+  bottom: 40px;
+  line-height: 40px;
 }
 picture .sizeImg {
   max-height: 550px;
@@ -370,11 +374,11 @@ picture .sizeImg {
 }
 .wrapForm .blockForm {
   position: absolute;
+  left: 135px;
   display: flex;
   flex-direction: column;
   max-width: 368px;
   top: 336px;
-  left: 135px;
 }
 .wrapForm .blockForm .blockTitle {
   font-size: 64px;
