--- a/assets/style/styleHeader.scss
+++ b/assets/style/styleHeader.scss
@@ -4,10 +4,10 @@
     position: relative;
 }
 header {
-    max-width: $max-width;
-    margin: $margin;
-    position: relative;
-    z-index: 3;
+    // max-width: $max-width;
+    // margin: $margin;
+    // position: relative;
+    // z-index: 3;
     nav {
         @include flex_jc(space-between);
         padding-top: 53px;
