--- a/index.pug
+++ b/index.pug
@@ -4,8 +4,9 @@ doctype html
 html(lang="en")
   head
     title= Mitravel
+    link(rel="stylesheet", href="assets/style/style.scss")
     style 
-      include ./assets/style/style.css
+      //- include ./assets/style/style.css
   body
     include components/navbar.pug
     include components/firstArticle.pug
