--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -1,3 +1,38 @@
+$max-width: 1570px;
+$margin: 0 auto;
+%btn {
+    display: flex;
+    justify-content: center;
+    button {
+        color: #ffffff;
+        font-size: 12px;
+        letter-spacing: 2.18182px;
+        text-align: center;
+        vertical-align: baseline;
+        text-transform: uppercase;
+    }
+}
+
+@mixin fontsc($f, $c) {
+    font-size: $f;
+    color: $c;
+}
+@mixin flex_jc($justify) {
+    display: flex;
+    justify-content: $justify;
+}
+@mixin flex_fd($direction) {
+    display: flex;
+    flex-direction: $direction;
+}
+@mixin posAbs_left($left) {
+    position: absolute;
+    left: $left;
+}
+
+
+
+
 .footer {
     height: 498px;
     margin-top: 140px;
@@ -43,7 +78,7 @@
                 border: 1px solid rgba(179, 179, 179, 0.5);
             }
             input::placeholder {
-                background: url(user.svg) no-repeat right;
+                background: url(/assets/images/iconUser.svg) no-repeat right;
             }
             .btn {
                 max-width: 376px;
