delete icon in input

--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -77,9 +77,9 @@ $margin: 0 auto;
                 background: #ffffff;
                 border: 1px solid rgba(179, 179, 179, 0.5);
             }
-            input::placeholder {
-                background: url(/assets/images/iconUser.svg) no-repeat right;
-            }
+            // input::placeholder {
+            //     background: url(/assets/style/user.svg) no-repeat right;
+            // }
             .btn {
                 max-width: 376px;
                 height: 80px;
