--- a/index.pug
+++ b/index.pug
@@ -1,9 +1,10 @@
 doctype html
 html(lang="en")
   head
-    title= Mitravel
+    title= 'Mitravel'
+    //- link(rel="stylesheet", href="css/style.css")
     style 
-      include assets/style/style.css
+      include css/style.css
   body
     include components/navbar.pug
     include components/firstArticle.pug
@@ -12,3 +13,4 @@ html(lang="en")
     include components/form.pug
     include components/inspirations.pug
     include components/footer.pug
+
