correct with bootstrap

--- a/assets/style/secondArticle.scss
+++ b/assets/style/secondArticle.scss
@@ -37,7 +37,7 @@ section {
     height: 1080px;
 }
 
-.container {
+.container-main  {
     max-width: $max-width;
     height: 1080px;
     position: relative;
