--- a/components/firstArticle.pug
+++ b/components/firstArticle.pug
@@ -1,11 +1,11 @@
 section.container
-    div.callArticle Become A Travel Pro In One Easy Lesson
-    .wrapImg 
-        img(src="./assets/images/Group4.jpg", alt="#")
-        span.withMask 
+    .text-center.text-h1 Become A Travel Pro In One Easy Lesson
+    .row
+        a.col(href="#")  
+            img(src="./assets/images/Group4.jpg", alt="#")
+        a.col(href="#")  
             img(src="./assets/images/MaskGroup.png", alt="#")
-            .mask 
-                img(src="./assets/images/mask.png", alt="") 
-            .maskText Vacation Home Rental Success
-        img(src="./assets/images/Copy8.png", alt="#")
-        img(src="./assets/images/Copy9.png", alt="#")
+        a.col(href="#")  
+            img(src="./assets/images/Copy8.png", alt="#")
+        a.col(href="#")  
+            img(src="./assets/images/Copy9.png", alt="#")
