--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title= 'Mitravel'
     //- link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css")
     style 
       include css/style.css
   body
