--- a/assets/style/styleHeader.scss
+++ b/assets/style/styleHeader.scss
@@ -100,7 +100,7 @@ header {
 .bottomHead {
     width: 100%;
     position: absolute;
-    bottom: 8px;
+    bottom: 0;
     height: 120px;
     @include flex_jc(space-between);
     input {
@@ -117,7 +117,6 @@ header {
     }
     img {
         border-radius: 8px 8px 0px 0px;
-        margin-bottom: -4px;
     }
     .btnPlay {
         @include posAbs_left(45%);
