--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ header .navbar .mainTitle {
 .bottomHead {
   width: 100%;
   position: absolute;
-  bottom: 8px;
+  bottom: 0;
   height: 120px;
   display: flex;
   justify-content: space-between;
@@ -139,7 +139,6 @@ header .navbar .mainTitle {
 }
 .bottomHead img {
   border-radius: 8px 8px 0px 0px;
-  margin-bottom: -4px;
 }
 .bottomHead .btnPlay {
   position: absolute;
