--- a/components/firstArticle.pug
+++ b/components/firstArticle.pug
@@ -1,11 +1,15 @@
 section.container
-    .text-center.text-h1 Become A Travel Pro In One Easy Lesson
+    .text-left.text-h1 Become A Travel Pro In One Easy Lesson
     .row
         a.col(href="#")  
-            img(src="./assets/images/Group4.jpg", alt="#")
+            .inner  
+                img(src="./assets/images/Group4.jpg", alt="#")
+        a.col(href="#")
+            .inner  
+                img(src="./assets/images/MaskGroup.png", alt="#")
         a.col(href="#")  
-            img(src="./assets/images/MaskGroup.png", alt="#")
+            .inner  
+                img(src="./assets/images/Copy8.png", alt="#")
         a.col(href="#")  
-            img(src="./assets/images/Copy8.png", alt="#")
-        a.col(href="#")  
-            img(src="./assets/images/Copy9.png", alt="#")
+            .inner  
+                img(src="./assets/images/Copy9.png", alt="#")
