--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -1,8 +1,10 @@
 $max-width: 1570px;
 $margin: 0 auto;
+
 %btn {
     display: flex;
     justify-content: center;
+
     button {
         color: #ffffff;
         font-size: 12px;
@@ -17,19 +19,48 @@ $margin: 0 auto;
     font-size: $f;
     color: $c;
 }
+
 @mixin flex_jc($justify) {
     display: flex;
     justify-content: $justify;
 }
+
 @mixin flex_fd($direction) {
     display: flex;
     flex-direction: $direction;
 }
+
 @mixin posAbs_left($left) {
     position: absolute;
     left: $left;
 }
 
+.text-h1 {
+    @include fontsc(64px, #1c2e3d);
+    padding: 150px 0px 96px 0px;
+    max-width: 730px;
+}
+
+a.col {
+    position: relative;
+
+    .inner:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: #73AFBA;
+        ;
+        opacity: 0;
+        transition: all 0.4s ease;
+    }
+
+    .inner:hover:before {
+        opacity: 0.9;
+    }
+}
 
 
 // .container {
