--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -44,7 +44,7 @@ $margin: 0 auto;
 a.col {
     position: relative;
 
-    .inner:before {
+    .item-inner:before {
         content: '';
         position: absolute;
         left: 0;
@@ -52,13 +52,35 @@ a.col {
         width: 100%;
         height: 100%;
         background: #73AFBA;
-        ;
         opacity: 0;
         transition: all 0.4s ease;
     }
 
-    .inner:hover:before {
+    .item-inner:hover:before {
         opacity: 0.9;
+    }
+
+    .item-text {
+        position: absolute;
+        max-width: 230px;
+        left: 50px;
+        bottom: 60px;
+        font-family: 'SFProDisplay';
+        font-size: 24px;
+        color: #FFFFFF;
+        overflow: hidden;
+        span{
+            display: block;
+            transform: translateY(70px);
+            transition: transform .3s ease;
+        }
+    }
+    .item-inner:hover{
+        .item-text{
+            span{
+                transform: translateY(0);
+            }
+        }
     }
 }
 
