--- a/components/firstArticle.pug
+++ b/components/firstArticle.pug
@@ -2,14 +2,22 @@ section.container
     .text-left.text-h1 Become A Travel Pro In One Easy Lesson
     .row
         a.col(href="#")  
-            .inner  
+            .item-inner  
                 img(src="./assets/images/Group4.jpg", alt="#")
+                .item-text
+                    span Vacation Home Rental Success
         a.col(href="#")
-            .inner  
+            .item-inner    
                 img(src="./assets/images/MaskGroup.png", alt="#")
+                .item-text
+                    span Vacation Home Rental Success
         a.col(href="#")  
-            .inner  
+            .item-inner    
                 img(src="./assets/images/Copy8.png", alt="#")
+                .item-text
+                    span Vacation Home Rental Success
         a.col(href="#")  
-            .inner  
+            .item-inner    
                 img(src="./assets/images/Copy9.png", alt="#")
+                .item-text
+                    span Vacation Home Rental Success
