--- a/css/firstArticle.css
+++ b/css/firstArticle.css
@@ -8,7 +8,7 @@
 a.col {
   position: relative;
 }
-a.col .inner:before {
+a.col .item-inner:before {
   content: "";
   position: absolute;
   left: 0;
@@ -19,6 +19,24 @@ a.col .inner:before {
   opacity: 0;
   transition: all 0.4s ease;
 }
-a.col .inner:hover:before {
+a.col .item-inner:hover:before {
   opacity: 0.9;
+}
+a.col .item-text {
+  position: absolute;
+  max-width: 230px;
+  left: 50px;
+  bottom: 60px;
+  font-family: "SFProDisplay";
+  font-size: 24px;
+  color: #FFFFFF;
+  overflow: hidden;
+}
+a.col .item-text span {
+  display: block;
+  transform: translateY(70px);
+  transition: transform 0.3s ease;
+}
+a.col .item-inner:hover .item-text span {
+  transform: translateY(0);
 }/*# sourceMappingURL=firstArticle.css.map */
