--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ header .navbar .mainTitle {
 a.col {
   position: relative;
 }
-a.col .inner:before {
+a.col .item-inner:before {
   content: "";
   position: absolute;
   left: 0;
@@ -197,8 +197,26 @@ a.col .inner:before {
   opacity: 0;
   transition: all 0.4s ease;
 }
-a.col .inner:hover:before {
+a.col .item-inner:hover:before {
   opacity: 0.9;
+}
+a.col .item-text {
+  position: absolute;
+  max-width: 230px;
+  left: 50px;
+  bottom: 60px;
+  font-family: "SFProDisplay";
+  font-size: 24px;
+  color: #FFFFFF;
+  overflow: hidden;
+}
+a.col .item-text span {
+  display: block;
+  transform: translateY(70px);
+  transition: transform 0.3s ease;
+}
+a.col .item-inner:hover .item-text span {
+  transform: translateY(0);
 }
 
 .footer .containerFooter .column .btn, .wrapForm form .btnForm, .leftColumn .btnBottom, .leftColumn .btnTop, .wrapMainText .btn {
