--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -43,15 +43,23 @@ $margin: 0 auto;
 
 a.col {
     position: relative;
+    .item-inner{
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 
     .item-inner:before {
         content: '';
         position: absolute;
-        left: 0;
+        left: 12px;
         top: 0;
-        width: 100%;
+        width: 94%;
         height: 100%;
         background: #73AFBA;
+        border-radius: 5px;
         opacity: 0;
         transition: all 0.4s ease;
     }
