--- a/css/firstArticle.css
+++ b/css/firstArticle.css
@@ -8,14 +8,20 @@
 a.col {
   position: relative;
 }
+a.col .item-inner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 a.col .item-inner:before {
   content: "";
   position: absolute;
-  left: 0;
+  left: 12px;
   top: 0;
-  width: 100%;
+  width: 94%;
   height: 100%;
   background: #73AFBA;
+  border-radius: 5px;
   opacity: 0;
   transition: all 0.4s ease;
 }
