--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,11 @@ header .navbar .mainTitle {
 a.col {
   position: relative;
 }
+a.col .item-inner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 a.col .item-inner:before {
   content: "";
   position: absolute;
