--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -40,57 +40,69 @@ $margin: 0 auto;
     padding: 150px 0px 96px 0px;
     max-width: 730px;
 }
-
-a.col {
-    position: relative;
-    .item-inner{
-        img{
-            width: 100%;
+.row{
+    a.col {
+        position: relative;
+        .item-inner{
             height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    .item-inner:before {
-        content: '';
-        position: absolute;
-        left: 12px;
-        top: 0;
-        width: 94%;
-        height: 100%;
-        background: #73AFBA;
-        border-radius: 5px;
-        opacity: 0;
-        transition: all 0.4s ease;
-    }
-
-    .item-inner:hover:before {
-        opacity: 0.9;
-    }
-
-    .item-text {
-        position: absolute;
-        max-width: 230px;
-        left: 50px;
-        bottom: 60px;
-        font-family: 'SFProDisplay';
-        font-size: 24px;
-        color: #FFFFFF;
-        overflow: hidden;
-        span{
-            display: block;
-            transform: translateY(70px);
-            transition: transform .3s ease;
-        }
-    }
-    .item-inner:hover{
-        .item-text{
-            span{
-                transform: translateY(0);
+            overflow: hidden;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: all .4 ease;
+            }
+            &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background: #73AFBA;
+                border-radius: 5px;
+                opacity: 0;
+                transition: all 0.4s ease;
+                z-index: 10;
+            }
+        
+            &:hover:before {
+                opacity: 0.9;
+            }
+            
+        
+            .item-text {
+                position: absolute;
+                max-width: 230px;
+                left: 50px;
+                bottom: 60px;
+                font-family: 'SFProDisplay';
+                font-size: 24px;
+                color: #FFFFFF;
+                overflow: hidden;
+                z-index: 20;
+                span{
+                    display: block;
+                    transform: translateY(70px);
+                    transition: transform .3s ease;
+                }
+            }
+            &:hover{
+                img{
+                    transform: scale(1.05);
+                }
+                .item-text{
+                    span{
+                        transform: translateY(0);
+                    }
+                }
             }
         }
+    
+
     }
 }
+
 
 
 // .container {
