--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -40,18 +40,25 @@ $margin: 0 auto;
     padding: 150px 0px 96px 0px;
     max-width: 730px;
 }
-.row{
+
+.row {
     a.col {
         position: relative;
-        .item-inner{
+        margin: 10px;
+        padding: 0;
+
+        .item-inner {
             height: 100%;
             overflow: hidden;
-            img{
+            border-radius: 5px;
+
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 transition: all .4 ease;
             }
+
             &:before {
                 content: '';
                 position: absolute;
@@ -65,12 +72,13 @@ $margin: 0 auto;
                 transition: all 0.4s ease;
                 z-index: 10;
             }
-        
+
             &:hover:before {
                 opacity: 0.9;
+                border-radius: 5px;
             }
-            
-        
+
+
             .item-text {
                 position: absolute;
                 max-width: 230px;
@@ -81,24 +89,27 @@ $margin: 0 auto;
                 color: #FFFFFF;
                 overflow: hidden;
                 z-index: 20;
-                span{
+
+                span {
                     display: block;
                     transform: translateY(70px);
                     transition: transform .3s ease;
                 }
             }
-            &:hover{
-                img{
+
+            &:hover {
+                img {
                     transform: scale(1.05);
                 }
-                .item-text{
-                    span{
+
+                .item-text {
+                    span {
                         transform: translateY(0);
                     }
                 }
             }
         }
-    
+
 
     }
 }
