--- a/css/firstArticle.css
+++ b/css/firstArticle.css
@@ -7,15 +7,19 @@
 
 .row a.col {
   position: relative;
+  margin: 10px;
+  padding: 0;
 }
 .row a.col .item-inner {
   height: 100%;
   overflow: hidden;
+  border-radius: 5px;
 }
 .row a.col .item-inner img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.4 ease;
 }
 .row a.col .item-inner:before {
@@ -33,6 +37,7 @@
 }
 .row a.col .item-inner:hover:before {
   opacity: 0.9;
+  border-radius: 5px;
 }
 .row a.col .item-inner .item-text {
   position: absolute;
