--- a/css/secondArticle.css
+++ b/css/secondArticle.css
@@ -111,7 +111,8 @@ section {
   position: absolute;
   left: 0;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   top: 0;
   left: 0;
