--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ header .navbar .mainTitle {
   width: 100%;
   position: absolute;
   left: 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   top: 0;
   left: 0;
@@ -185,15 +186,19 @@ header .navbar .mainTitle {
 
 .row a.col {
   position: relative;
+  margin: 10px;
+  padding: 0;
 }
 .row a.col .item-inner {
   height: 100%;
   overflow: hidden;
+  border-radius: 5px;
 }
 .row a.col .item-inner img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.4 ease;
 }
 .row a.col .item-inner:before {
@@ -211,6 +216,7 @@ header .navbar .mainTitle {
 }
 .row a.col .item-inner:hover:before {
   opacity: 0.9;
+  border-radius: 5px;
 }
 .row a.col .item-inner .item-text {
   position: absolute;
@@ -348,7 +354,8 @@ section {
   position: absolute;
   left: 0;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   top: 0;
   left: 0;
