--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -1,11 +1,22 @@
 .wrap
     .nameArticle Featured Videos
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-picture
-    img(src='./assets/images/3.jpg', alt="#").sizeImg
-    .wrapVideo
-        img(src='./assets/images/1.jpg', alt="#")
-        .btnPlay 
-            img(src="./assets/images/play.png", alt="#")
-        .bottomTextPlay A Guide To Rocky Mountain Vacations 
-    img(src='./assets/images/2.jpg', alt="#").sizeImg
+//- picture
+//-     img(src='./assets/images/3.jpg', alt="#").sizeImg
+//-     .wrapVideo
+//-         img(src='./assets/images/1.jpg', alt="#")
+//-         .btnPlay 
+//-             img(src="./assets/images/play.png", alt="#")
+//-         .bottomTextPlay A Guide To Rocky Mountain Vacations 
+//-     img(src='./assets/images/2.jpg', alt="#").sizeImg
+.container-fluid.wrap_thirdArticle 
+    .row.gx-5.align-items-center 
+        .col
+            img(src='./assets/images/3.jpg', alt="#").item_img_width
+        .col-6.d-flex.justify-content-center
+            img(src='./assets/images/1.jpg', alt="#").item_img_width
+        .col.d-flex.justify-content-end
+            img(src='./assets/images/2.jpg', alt="#").item_img_width
+
+        
+   
