--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -13,8 +13,10 @@
     .row.gx-5.align-items-center 
         .col
             img(src='./assets/images/3.jpg', alt="#").item_img_width
-        .col-6.d-flex.justify-content-center
+        .col-6.d-flex.justify-content-center.position_Text
+            .bottomTextPlay A Guide To Rocky Mountain Vacations 
             img(src='./assets/images/1.jpg', alt="#").item_img_width
+                
         .col.d-flex.justify-content-end
             img(src='./assets/images/2.jpg', alt="#").item_img_width
 
