--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -14,7 +14,9 @@
         .col
             img(src='./assets/images/3.jpg', alt="#").item_img_width
         .col-6.d-flex.justify-content-center.position_Text
-            .bottomTextPlay A Guide To Rocky Mountain Vacations 
+            .bottomTextPlay A Guide To Rocky Mountain Vacations
+            .btnPlay 
+                img(src="./assets/images/play.png", alt="#") 
             img(src='./assets/images/1.jpg', alt="#").item_img_width
                 
         .col.d-flex.justify-content-end
