--- a/css/thirdArticle.css
+++ b/css/thirdArticle.css
@@ -6,7 +6,7 @@
   flex-wrap: nowrap;
 }
 .wrap_thirdArticle .row .item_img_width {
-  max-width: 100%;
+  width: 100%;
 }
 .wrap_thirdArticle .row .position_Text {
   position: relative;
@@ -18,4 +18,9 @@
   color: #ffffff;
   bottom: 5%;
   line-height: 40px;
+}
+.wrap_thirdArticle .row .position_Text .btnPlay {
+  position: absolute;
+  left: 48px;
+  top: 39px;
 }/*# sourceMappingURL=thirdArticle.css.map */
