--- a/components/form.pug
+++ b/components/form.pug
@@ -1,4 +1,4 @@
-picture.wrapForm
+.wrapForm
     img(src="./assets/images/mountain.png", alt="#")
     .blockForm
         .blockTitle Sign Up Our Newsletter
