--- a/assets/style/form.scss
+++ b/assets/style/form.scss
@@ -48,20 +48,20 @@ $margin: 0 auto;
         top: 336px;
         .blockTitle {
             @include fontsc(64px, #ffffff);
-            line-height: 80px;
+            line-height: 122%;
         }
         .blockText {
             @include fontsc(16px, #ffffff);
             margin-top: 40px;
             font-family: "SFCompactText";
-            line-height: 21px;
+            line-height: 130%;
         }
     }
     form {
         max-width: 501px;
         position: absolute;
         right: 133px;
-        top: 474px;
+        top: 452px;
         background-color: #ffffff;
         .wrapInput {
             @include flex_fd(column);
